# Fitnes-Club

./: .env  db.sqlite3  manage.py  pyproject.toml
Fitnes-Club/: asgi.py  settings.py  urls.py  wsgi.py
abonements/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
abonements/migrations/: 0001_initial.py  0002_trainer_remove_schedule_schedule_type_and_more.py  0003_alter_category_options_alter_review_options_and_more.py  0004_contactmessage_alter_subscriptiontype_options_and_more.py
catalog/: models.py  views.py
catalog/migrations/: 0001_initial.py
media/abonements/: i.jfif
templates/: base.html  index.html
templates/abonements/: abonement_confirm_delete.html  abonement_detail.html  abonement_form.html  abonement_list.html
templates/components/: footer.html  header.html
templates/fitness/: abonements_list.html
templates/registration/: login.html  register.html
templates/trainers/: trainer_list.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_phone.py
users/templates/users/: login.html  register.html
